--- a/notebooks/1_ExploreData.ipynb
+++ b/notebooks/1_ExploreData.ipynb
@@ -155,9 +155,9 @@
     "- Use `EXPLODE()` to transform arrays into individual rows\n",
     "- Use `*` to expand all columns from nested structs into flat columns\n",
     "\n",
-    "> 🎯 **Why This Matters**: This flattening pattern is essential for preparing semi-structured data for dimensional modeling (Bronze → Silver transformation).\n",
+    "> 🎯 **Why This Matters**: While many data engineers love the PySpark DataFrame API, Spark support SQL too, SparkSQL! It's often easier to express complex business logic in SQL, no need to compromise, work in the language that you are most comfortable with! \n",
     "\n",
-    "> 💡 **Pro Tip**: Use `%%sql` magic command or `spark.sql()` to write pure SQL instead of PySpark code!\n",
+    "> 💡 **Pro Tip**: Use `%%sql` magic command or `spark.sql()` to write pure SparkSQL instead of PySpark code!\n",
     "\n",
     "First, let's create the temporary view:"
    ]
@@ -508,7 +508,7 @@
    "id": "dee2b42f",
    "metadata": {},
    "source": [
-    "### ⏱️ Measure End-to-End Latency: Bronze Zone\n",
+    "### ⏱️ Measure End-to-End Latency: 🥉 Bronze Zone\n",
     "\n",
     "Let's measure the **latency** from when scan events are generated at IoT devices to when they land in the **Bronze** Delta table!\n",
     "\n",
@@ -539,7 +539,7 @@
    "id": "ba2177b6",
    "metadata": {},
    "source": [
-    "### ⏱️ Measure End-to-End Latency: Silver Zone\n",
+    "### ⏱️ Measure End-to-End Latency: 🥈 Silver Zone\n",
     "\n",
     "Now let's measure latency to the **Silver zone** - this shows the complete journey through your medallion architecture!\n",
     "\n",
