--- a/notebooks/1_ExploreData.ipynb
+++ b/notebooks/1_ExploreData.ipynb
@@ -103,7 +103,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Read parquet file via Spark\n",
+    "# Read parquet via Spark\n",
     "df = spark.read.parquet('Files/landing/item')\n",
     "display(df)"
    ]
@@ -127,7 +127,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Read parquet file via Spark\n",
+    "# Read JSON via Spark\n",
     "df = spark.read.json('Files/landing/shipment', multiLine=True)\n",
     "display(df)"
    ]
