--- a/notebooks/1_ExploreData.ipynb
+++ b/notebooks/1_ExploreData.ipynb
@@ -2,11 +2,21 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d1cb660b",
+   "id": "c43834dc",
    "metadata": {},
    "source": [
-    "![](https://github.com/microsoft/fabric-analytics-roadshow-lab/blob/initial-version-prep/assets/images/spark/analytics.png?raw=true)\n",
-    "# Welcome to the Fabric Analytics Roadshow Lab\n",
+    "<div style=\"margin: 0; padding: 0; text-align: left;\">\n",
+    "  <table style=\"border: none; margin: 0; padding: 0; border-collapse: collapse;\">\n",
+    "    <tr>\n",
+    "      <td style=\"border: none; vertical-align: middle; text-align: left; padding: 0; margin: 0;\">\n",
+    "        <img src=\"https://github.com/microsoft/fabric-analytics-roadshow-lab/blob/initial-version-prep/assets/images/spark/analytics.png?raw=true\" width=\"140\" />\n",
+    "      </td>\n",
+    "      <td style=\"border: none; vertical-align: middle; padding-left: 0px; text-align: left; padding-right: 0; padding-top: 0; padding-bottom: 0;\">\n",
+    "        <h1 style=\"font-weight: bold; margin: 0;\">Fabric Analytics Roadshow Lab</h1>\n",
+    "      </td>\n",
+    "    </tr>\n",
+    "  </table>\n",
+    "</div>\n",
     "\n",
     "## Overview\n",
     "Welcome to the **McMillan Industrial Group** analytics transformation journey! In this lab, you'll build a modern, streaming-enabled data lakehouse using Microsoft Fabric.\n",
