--- a/setup/deploy.ipynb
+++ b/setup/deploy.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "6704c873",
    "metadata": {},
    "outputs": [
@@ -29,10 +29,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created temporary directory: C:\\Users\\MILESC~1\\AppData\\Local\\Temp\\fabric_roadshow_e0amq7md\n",
+      "Created temporary directory: C:\\Users\\MILESC~1\\AppData\\Local\\Temp\\fabric_roadshow_2iqo6pkq\n",
       "Cloning https://github.com/microsoft/fabric-analytics-roadshow-lab.git (branch: initial-version-prep)...\n",
-      "✅ Successfully cloned repository to: C:\\Users\\MILESC~1\\AppData\\Local\\Temp\\fabric_roadshow_e0amq7md\n",
-      "📁 Workspace directory: C:\\Users\\MILESC~1\\AppData\\Local\\Temp\\fabric_roadshow_e0amq7md\\workspace\n"
+      "✅ Successfully cloned repository to: C:\\Users\\MILESC~1\\AppData\\Local\\Temp\\fabric_roadshow_2iqo6pkq\n",
+      "📁 Workspace directory: C:\\Users\\MILESC~1\\AppData\\Local\\Temp\\fabric_roadshow_2iqo6pkq\\workspace\n",
+      "✅ Successfully cloned repository to: C:\\Users\\MILESC~1\\AppData\\Local\\Temp\\fabric_roadshow_2iqo6pkq\n",
+      "📁 Workspace directory: C:\\Users\\MILESC~1\\AppData\\Local\\Temp\\fabric_roadshow_2iqo6pkq\\workspace\n"
      ]
     }
    ],
@@ -76,15 +78,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Installing fabric_cicd from: C:\\Users\\MILESC~1\\AppData\\Local\\Temp\\fabric_roadshow_e0amq7md\\setup\\fabric_cicd-0.1.33-py3-none-any.whl\n",
-      "✅ Successfully installed fabric_cicd\n",
-      "✅ Successfully installed fabric_cicd\n"
+      "Installing fabric_cicd from: C:\\Users\\MILESC~1\\AppData\\Local\\Temp\\fabric_roadshow_2iqo6pkq\\setup\\fabric_cicd-0.1.33-SJD-py3-none-any.whl\n",
+      "❌ Installation failed:\n",
+      "No pyvenv.cfg file\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "# Install fabric_cicd from the cloned repository\n",
-    "whl_path = os.path.join(temp_dir, \"setup\", \"fabric_cicd-0.1.33-SJD-py3-none-any.whl\")\n",
+    "whl_path = os.path.join(temp_dir, \"setup\", \"fabric_cicd-0.1.33-py3-none-any.whl\")\n",
     "print(f\"Installing fabric_cicd from: {whl_path}\")\n",
     "\n",
     "import subprocess\n",
