added missing lib to publish

--- a/setup/deploy.ipynb
+++ b/setup/deploy.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "6704c873",
    "metadata": {},
    "outputs": [
@@ -29,12 +29,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created temporary directory: C:\\Users\\MILESC~1\\AppData\\Local\\Temp\\fabric_roadshow_2iqo6pkq\n",
+      "Created temporary directory: C:\\Users\\MILESC~1\\AppData\\Local\\Temp\\fabric_roadshow_454yxr3g\n",
       "Cloning https://github.com/microsoft/fabric-analytics-roadshow-lab.git (branch: initial-version-prep)...\n",
-      "✅ Successfully cloned repository to: C:\\Users\\MILESC~1\\AppData\\Local\\Temp\\fabric_roadshow_2iqo6pkq\n",
-      "📁 Workspace directory: C:\\Users\\MILESC~1\\AppData\\Local\\Temp\\fabric_roadshow_2iqo6pkq\\workspace\n",
-      "✅ Successfully cloned repository to: C:\\Users\\MILESC~1\\AppData\\Local\\Temp\\fabric_roadshow_2iqo6pkq\n",
-      "📁 Workspace directory: C:\\Users\\MILESC~1\\AppData\\Local\\Temp\\fabric_roadshow_2iqo6pkq\\workspace\n"
+      "✅ Successfully cloned repository to: C:\\Users\\MILESC~1\\AppData\\Local\\Temp\\fabric_roadshow_454yxr3g\n",
+      "📁 Workspace directory: C:\\Users\\MILESC~1\\AppData\\Local\\Temp\\fabric_roadshow_454yxr3g\\workspace\n"
      ]
     }
    ],
@@ -70,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "2da9de52",
    "metadata": {},
    "outputs": [
@@ -78,10 +76,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Installing fabric_cicd from: C:\\Users\\MILESC~1\\AppData\\Local\\Temp\\fabric_roadshow_2iqo6pkq\\setup\\fabric_cicd-0.1.33-SJD-py3-none-any.whl\n",
-      "❌ Installation failed:\n",
-      "No pyvenv.cfg file\n",
-      "\n"
+      "Installing fabric_cicd from: C:\\Users\\MILESC~1\\AppData\\Local\\Temp\\fabric_roadshow_454yxr3g\\setup\\fabric_cicd-0.1.33-py3-none-any.whl\n",
+      "✅ Successfully installed fabric_cicd\n"
      ]
     }
    ],
@@ -108,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "eecaf5fd",
    "metadata": {},
    "outputs": [
@@ -326,7 +322,7 @@
     "append_feature_flag(\"enable_lakehouse_unpublish\")\n",
     "\n",
     "# Sample values for FabricWorkspace parameters\n",
-    "workspace_id = \"964034d8-8b2d-4bec-90ae-1b702facb3a5\"\n",
+    "workspace_id = \"0ba90db6-964b-4451-9777-d7228c601c0e\"\n",
     "# Use the workspace directory from the cloned repository\n",
     "repository_directory = workspace_root\n",
     "item_type_in_scope = [\"Notebook\", \"Lakehouse\", \"SparkJobDefinition\", \"Environment\"]  # \n",
