prep for inital commit to main

--- a/setup/deploy.ipynb
+++ b/setup/deploy.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "6704c873",
    "metadata": {},
    "outputs": [
@@ -58,7 +58,7 @@
     "\n",
     "# Clone the specific branch\n",
     "repo_url = \"https://github.com/microsoft/fabric-analytics-roadshow-lab.git\"\n",
-    "branch_name = \"initial-version-prep\"\n",
+    "branch_name = \"main\"\n",
     "\n",
     "print(f\"Cloning {repo_url} (branch: {branch_name})...\")\n",
     "result = subprocess.run(\n",
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "2da9de52",
    "metadata": {},
    "outputs": [
@@ -94,7 +94,7 @@
    ],
    "source": [
     "# Install fabric_cicd from the cloned repository\n",
-    "whl_path = os.path.join(temp_dir, \"setup\", \"fabric_cicd-0.1.33-py3-none-any.whl\")\n",
+    "whl_path = os.path.join(temp_dir, \"setup\", \"fabric_cicd-0.1.34-py3-none-any.whl\")\n",
     "print(f\"Installing fabric_cicd from: {whl_path}\")\n",
     "\n",
     "import subprocess\n",
@@ -111,44 +111,6 @@
     "else:\n",
     "    print(f\"❌ Installation failed:\")\n",
     "    print(result.stderr)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "c148014c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def is_fabric_runtime() -> bool:\n",
-    "    try:\n",
-    "        notebookutils = get_ipython().user_ns.get(\"notebookutils\")  # noqa: F821\n",
-    "        if notebookutils and hasattr(notebookutils, 'runtime'):\n",
-    "            if hasattr(notebookutils.runtime, 'context'):\n",
-    "                return True\n",
-    "        return False           \n",
-    "    except:\n",
-    "        return False\n",
-    "\n",
-    "def gen_fabric_token():\n",
-    "    from azure.core.credentials import AccessToken, TokenCredential\n",
-    "    from datetime import datetime, timezone\n",
-    "\n",
-    "    class NotebookTokenCredential(TokenCredential):\n",
-    "        \"\"\"Custom credential that uses notebookutils to get tokens.\"\"\"\n",
-    "\n",
-    "        def __init__(self, audience='pbi'):\n",
-    "            self.audience = audience\n",
-    "\n",
-    "        def get_token(self, *scopes, **kwargs):\n",
-    "            \"\"\"Get token using notebookutils.\"\"\"\n",
-    "            token_string = notebookutils.credentials.getToken(self.audience)\n",
-    "\n",
-    "            # Return an AccessToken object\n",
-    "            # Set expiration far in the future since we don't have exact expiry info\n",
-    "            return AccessToken(token_string, int(datetime.now(timezone.utc).timestamp()) + 3600)\n",
-    "\n",
-    "    return NotebookTokenCredential('pbi')"
    ]
   },
   {
@@ -1976,8 +1938,7 @@
     "target_workspace = FabricWorkspace(\n",
     "    workspace_id=workspace_id,\n",
     "    repository_directory=repository_directory,\n",
-    "    item_type_in_scope=item_type_in_scope,\n",
-    "    token_credential= gen_fabric_token() if is_fabric_runtime() else None\n",
+    "    item_type_in_scope=item_type_in_scope\n",
     ")\n",
     "\n",
     "# Publish all items defined in item_type_in_scope\n",
